# MolecularIntegrals.jl

./: .appveyor.yml  .travis.yml  CI.yml  CLAUDE.md  CODE_REVIEW.md  Julia optimization post.md  LICENSE.md  Manifest.toml  Notes.md  Project.toml  README.md  TODO.md  boysfunction.jl
docs/: comparing_with_pyquante2.md  make.jl
docs/src/: index.md
python/: CLAUDE.md  README.md  __init__.py  juliapkg.json  molecular_integrals.py  pyproject.toml
python/examples/: compare_with_pyquante2.py  test_ints.ipynb
src/: Atoms.jl  Basis.jl  Boys.jl  Data.jl  ERI.jl  HGP.jl  HGP2.jl  HGPgen.jl  HGPgen2.jl  HGPgen3.jl  HGPold.jl  HGPother.jl  MolecularIntegrals.jl  OneInts.jl  Rys.jl  Utils.jl
test/: prof_hgp.jl  prof_rys.jl  profile.jl  profile_hgp.jl  pyquante-tests.ipynb  runtest.jl  runtests.jl  timing.jl
tools/: boys-stackoverflow.jl  boysfunction.jl  boysfunction.md  generate_vrr.jl  molints_pluto.jl  simpleboys backup 1.jl  simpleboys.jl  standalone_vrr.ipynb  standalone_vrr.jl  timing-history.jl
