[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molecular-integrals-jl"
version = "0.1.0"
description = "Python wrapper for MolecularIntegrals.jl electron repulsion integrals"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "MolecularIntegrals.jl Authors"}
]
keywords = ["quantum chemistry", "molecular integrals", "electron repulsion integrals", "julia"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "juliacall>=0.9.14",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyquante2",
]

[project.urls]
"Homepage" = "https://github.com/rpmuller/MolecularIntegrals.jl"
"Bug Reports" = "https://github.com/rpmuller/MolecularIntegrals.jl/issues"
"Source" = "https://github.com/rpmuller/MolecularIntegrals.jl"

[tool.setuptools]
packages = ["molecular_integrals_jl"]
package-dir = {"molecular_integrals_jl" = "."}
